# egui

./: Cargo.toml
egui_demo_lib/: Cargo.toml
egui_demo_lib/src/: syntax_highlighting.rs
src/: syntax_highlighting.rs
